<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_generate"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_generate" />
        <item
            android:id="@+id/nav_trend"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_trend" />
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_record" />
        <item
            android:id="@+id/nav_consume"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_consume" />
        <item
            android:id="@+id/nav_calorie"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_calorie" />
    </group>
</menu>
