<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.zzht.fitapp2.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.zzht.fitapp2.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>



    <fragment
        android:id="@+id/nav_generate"
        android:name="com.zzht.fitapp2.ui.GeneratePlanFragment"
        android:label="@string/menu_generate"
        tools:layout="@layout/fragment_generate_plan" />
    <fragment
        android:id="@+id/nav_record"
        android:name="com.zzht.fitapp2.ui.RecordFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/nav_trend"
        android:name="com.zzht.fitapp2.ui.TrendFragment"
        android:label="@string/menu_trend"
        tools:layout="@layout/fragment_trend" />

    <fragment
        android:id="@+id/nav_calorie"
        android:name="com.zzht.fitapp2.ui.CalorieFragment"
        android:label="@string/menu_calorie"
        tools:layout="@layout/fragment_calorie" />

    <fragment
        android:id="@+id/nav_consume"
        android:name="com.zzht.fitapp2.ui.ConsumeFragment"
        android:label="@string/menu_consume"
        tools:layout="@layout/fragment_consume" />




</navigation>